// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentUpcomingSubPanel renders "current" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="grid grid-cols-2 gap-4 md:flex"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:max-w-[127px]"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Cycle #
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:w-fit"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Status
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              Active
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 col-span-2 md:flex-1"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Remaining time
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1 day
            </span>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders "upcoming" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="grid grid-cols-2 gap-4 md:flex"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:max-w-[127px]"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Cycle #
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:w-fit"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Status
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              Active
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 col-span-2 md:flex-1"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Cycle length
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1 day
            </span>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders a skeleton when loading "current" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="grid grid-cols-2 gap-4 md:flex"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:max-w-[127px]"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Cycle #
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:w-fit"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Status
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              Active
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 col-span-2 md:flex-1"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Remaining time
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1 day
            </span>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;

exports[`CurrentUpcomingSubPanel renders a skeleton when loading "upcoming" 1`] = `
<div>
  <div>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="grid grid-cols-2 gap-4 md:flex"
      >
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:max-w-[127px]"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Cycle #
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 w-full md:w-fit"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Status
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              Active
            </span>
          </div>
        </div>
        <div
          class="rounded-lg bg-smoke-50 py-5 px-6 dark:bg-slate-700 col-span-2 md:flex-1"
        >
          <div
            class="flex w-full flex-col gap-2"
          >
            <span
              class="flex items-center justify-between gap-3"
            >
              <span
                class="max-w-min whitespace-nowrap font-body text-sm font-medium text-grey-600 dark:text-slate-200"
              >
                Cycle length
              </span>
            </span>
            <span
              class="truncate font-heading text-xl font-medium dark:text-slate-50"
            >
              1 day
            </span>
          </div>
        </div>
      </div>
      <div>
        Configuration
      </div>
    </div>
    <div>
      Payouts
    </div>
  </div>
</div>
`;
